# rs-stellar-xdr

./: Cargo.toml  Makefile  README.md
src/: lib.rs
src/curr/: generated.rs  mod.rs  scval_conversions.rs
src/next/: generated.rs  mod.rs  scval_conversions.rs
tests/: account_conversions.rs  ledgerkey_to_key.rs  serde.rs  serde_ints.rs  serde_tx.rs  str.rs  tx_small.rs  vecm.rs
xdr/: curr-version  next-version
xdr-generator/generator/: generator.rb  header.rs
