[package]
name = "stellar-xdr"
description = "Stellar XDR types, encoding, and decoding."
homepage = "https://github.com/stellar/rs-stellar-xdr"
repository = "https://github.com/stellar/rs-stellar-xdr"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version = "23.0.0"
edition = "2021"
rust-version = "1.84.0"

[build-dependencies]
crate-git-revision = "0.0.6"

[dependencies]
cfg_eval = { version = "0.1.2" }
stellar-strkey = { version = "0.0.13", optional = true }
serde = { version = "1.0.225", default-features = false, features = [
    "derive",
    "alloc",
], optional = true }
serde_with = { version = "3.14.0", default-features = false, features = [
    "alloc",
    "macros",
], optional = true }
escape-bytes = { version = "0.1.1", default-features = false }
hex = { version = "0.4.3", default-features = false, optional = true }
serde_json = { version = "1.0.145", default-features = false, features = [
    "alloc",
], optional = true }
ethnum = { version = "1.5.1", optional = true }
embedded-io = { version = "0.6.1", default-features = false, optional = true }
embedded-io-cursor = { version = "0.1.0", default-features = false, optional = true }

[dev-dependencies]

[features]
default = ["alloc", "curr"]
alloc = [
    "dep:ethnum",
    "dep:hex",
    "dep:stellar-strkey",
    "dep:embedded-io",
    "dep:embedded-io-cursor",
    "escape-bytes/alloc",
    "hex/alloc",
    "embedded-io/alloc",
    "embedded-io-cursor/alloc",
]
curr = []
next = []

# Features dependent on optional dependencies.
serde = ["alloc", "dep:serde", "dep:serde_with", "hex/serde"]
serde_json = ["serde", "dep:serde_json"]
hex = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs"]
